# fastdate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs  bench_date.rs
src/: date.rs  datetime.rs  error.rs  lib.rs  time.rs
src/sys/: mod.rs  windows.rs
tests/: date.rs  datetime.rs  error.rs  offset.rs  time.rs
