[package]
name = "fastdate"
version = "0.1.30"
edition = "2021"
description = "Rust fast date carte"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
repository = "https://github.com/rbatis/fastdate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = "1.13.0"
serde = "1"

[dev-dependencies]
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "minwinbase", "minwindef", "timezoneapi"] }

