[package]
name = "fastdate"
version = "0.3.34"
edition = "2024"
description = "Rust fast date carte"
readme = "README.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
repository = "https://github.com/rbatis/fastdate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1"
time1 = { version = "0.3.20", package = "time",features = ["formatting","parsing","serde"] }
[dev-dependencies]
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Time",
]
